# TheatrefestV2

./: .gitignore  CleanFestival.sql  Copy Festival Content.sql  CopyAdminUsers.sql  CopyFestival.sql  CopyFestivalV2.sql  CopyTF2018Data.sql  CopyTicketTypes.sql  InitFestival.sql  Test Festival.sql  TestFestival.sql  TheatrefestV2.sln  pyproject.toml  requirements.txt  sync_media_uploads.sh
WebSite/: WebSite.pyproj  compilerconfig.json  manage.py  pull_theatrefestvm.sh  pull_training.sh  push-exclude.txt  push_theatrefest.sh  push_training.sh  pytest.ini  requirements.txt  requirements_save.txt
WebSite/boxoffice/: apps.py  forms.py  urls.py  views.py
WebSite/content/: admin.py  forms.py  models.py  urls.py  views.py
WebSite/content/migrations/: 0001_initial.py  0002_auto_20190216_1736.py  0002_initial.py  0003_auto_20190217_0921.py  0003_nested_navigators.py  0004_Use_UniqueConstraint.py  0004_page_body_test.py  0005_auto_20190217_1148.py  0006_auto_20190220_1132.py  0007_resource_type.py  0008_auto_20190427_1636.py  0009_alter_navigator_type.py  0010_alter_resource_type.py  0011_image_map.py
WebSite/core/: admin.py  backends.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py  widgets.py
WebSite/core/migrations/: 0001_initial.py  0002_add_online_buttons.py  0002_auto_20180919_0933.py  0002_festival_cleanup.py  0003_add_previous_festival.py  0003_auto_20180919_0938.py  0004_festival_is_live.py  0004_siteinfo_base_template.py  0005_auto_20180919_1950.py  0005_merge_volunteer_into_user.py  0006_siteinfo_banner.py  0007_auto_20180919_2137.py  (+15 more)
WebSite/festival/: admin.py  forms.py  models.py  urls.py  views.py
WebSite/program/: admin.py  forms.py  models.py  urls.py  views.py
WebSite/reports/: forms.py  urls.py  views.py
WebSite/static/: default.css  maintenance.html
WebSite/templates/: _tab_messages.html  base.html  bs4_field.html  bs4_form.html  bs4_formset_table.html
WebSite/tickets/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
WebSite/venue/: apis.py  forms.py  urls.py  views.py
WebSite/volunteers/: forms.py  models.py  urls.py  views.py
WebSite/website/: __init__.py  urls.py  wsgi.py  wsgi_production.py  wsgi_training.py
(+1357 files in other folders)
