[project]
name = "theatrefestv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "arrow>=1.3.0",
    "asgiref>=3.8.1",
    "astroid>=3.3.5",
    "atomicwrites>=1.4.1",
    "attrs>=24.2.0",
    "autopep8>=2.3.1",
    "cachetools>=5.5.0",
    "certifi>=2024.8.30",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.0",
    "colorama>=0.4.6",
    "confusable-homoglyphs>=3.3.1",
    "crispy-bootstrap4>=2024.10",
    "dill>=0.3.9",
    "django>=5.0,<5.1",
    "django-appconf>=1.0.6",
    "django-autocomplete-light>=3.11.0",
    "django-bootstrap-datepicker-plus>=5.0.5",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar>=4.4.6",
    "django-extra-views>=0.15.0",
    "django-htmx>=1.21.0",
    "django-registration>=5.1.0",
    "django-requestlogging-redux>=1.2.1",
    "django-select2>=8.2.1",
    "django-sslserver>=0.22",
    "django-widget-tweaks>=1.5.0",
    "exceptiongroup>=1.2.2",
    "idna>=3.10",
    "iniconfig>=2.0.0",
    "isort>=5.13.2",
    "lazy-object-proxy>=1.10.0",
    "logging-tree>=1.10",
    "mccabe>=0.7.0",
    "more-itertools>=10.5.0",
    "numpy>=2.1.3",
    "oauthlib>=3.2.2",
    "packaging>=24.2",
    "pillow>=11.0.0",
    "pip-review>=1.3.0",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "psycopg2>=2.9.10",
    "py>=1.11.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pycodestyle>=2.12.1",
    "pycparser>=2.22",
    "pydantic>=2.9.2",
    "pydantic-core>=2.23.4",
    "pylint>=3.3.1",
    "pyparsing>=3.2.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9",
    "six>=1.16.0",
    "sqlparse>=0.5.2",
    "stripe>=11.2.0",
    "toml>=0.10.2",
    "tomli>=2.1.0",
    "tomlkit>=0.13.2",
    "typed-ast>=1.5.5",
    "types-python-dateutil>=2.9.0.20241003",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
    "wcwidth>=0.2.13",
    "wrapt>=1.16.0",
    "xlsxwriter>=3.2.0",
]
